fixed all errors of patient service