@@ -33,30 +33,30 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional
     public PatientAppointmentDto create(PatientAppointmentDto patientAppointmentDto) {
         log.info("Creating patient appointment for patient ID: {}", patientAppointmentDto.getPatientId());
-        
+
         try {
             if (patientAppointmentDto.getPatientId() == null) {
                 throw new IllegalArgumentException("Patient ID is required");
             }
-            
+
             if (patientAppointmentDto.getAppointmentId() == null) {
                 throw new IllegalArgumentException("Appointment ID is required");
             }
-            
+
             // Verify patient exists
             Patient patient = patientRepository.findById(patientAppointmentDto.getPatientId())
                     .orElseThrow(() -> new PatientNotFoundException(patientAppointmentDto.getPatientId()));
-            
+
             // Check if link already exists
             if (existsByPatientIdAndAppointmentId(patientAppointmentDto.getPatientId(), patientAppointmentDto.getAppointmentId())) {
                 throw new PatientServiceException("Patient is already linked to this appointment");
             }
-            
+
             PatientAppointment patientAppointment = patientAppointmentMapper.patientAppointmentDtoToPatientAppointment(patientAppointmentDto);
             patientAppointment.setPatient(patient);
-            
+
             PatientAppointment savedAppointment = patientAppointmentRepository.save(patientAppointment);
-            
+
             log.info("Patient appointment created successfully with ID: {}", savedAppointment.getId());
             return patientAppointmentMapper.patientAppointmentToPatientAppointmentDto(savedAppointment);
         } catch (PatientNotFoundException e) {
@@ -71,10 +71,10 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional(readOnly = true)
     public PatientAppointmentDto findById(UUID id) {
         log.info("Finding patient appointment by ID: {}", id);
-        
+
         PatientAppointment patientAppointment = patientAppointmentRepository.findById(id)
                 .orElseThrow(() -> new PatientServiceException("Patient appointment not found with id: " + id));
-        
+
         return patientAppointmentMapper.patientAppointmentToPatientAppointmentDto(patientAppointment);
     }
 
@@ -82,7 +82,7 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional(readOnly = true)
     public List<PatientAppointmentDto> findByPatientId(UUID patientId) {
         log.info("Finding patient appointments by patient ID: {}", patientId);
-        
+
         List<PatientAppointment> appointments = patientAppointmentRepository.findByPatientId(patientId);
         return appointments.stream()
                 .map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto)
@@ -93,7 +93,7 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional(readOnly = true)
     public Page<PatientAppointmentDto> findAll(Pageable pageable) {
         log.info("Finding all patient appointments with pagination");
-        
+
         Page<PatientAppointment> appointments = patientAppointmentRepository.findAll(pageable);
         return appointments.map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto);
     }
@@ -102,16 +102,16 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional
     public PatientAppointmentDto update(UUID id, PatientAppointmentDto patientAppointmentDto) {
         log.info("Updating patient appointment with ID: {}", id);
-        
+
         try {
             PatientAppointment existingAppointment = patientAppointmentRepository.findById(id)
                     .orElseThrow(() -> new PatientServiceException("Patient appointment not found with id: " + id));
-            
+
             // Update appointment ID if provided
             if (patientAppointmentDto.getAppointmentId() != null) {
                 existingAppointment.setAppointmentId(patientAppointmentDto.getAppointmentId());
             }
-            
+
             PatientAppointment updatedAppointment = patientAppointmentRepository.save(existingAppointment);
             return patientAppointmentMapper.patientAppointmentToPatientAppointmentDto(updatedAppointment);
         } catch (Exception e) {
@@ -130,12 +130,12 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional
     public void delete(UUID id) {
         log.info("Deleting patient appointment with ID: {}", id);
-        
+
         try {
             if (!patientAppointmentRepository.existsById(id)) {
                 throw new PatientServiceException("Patient appointment not found with id: " + id);
             }
-            
+
             patientAppointmentRepository.deleteById(id);
             log.info("Patient appointment deleted successfully with ID: {}", id);
         } catch (Exception e) {
@@ -149,47 +149,28 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional(readOnly = true)
     public List<PatientAppointmentDto> findByAppointmentId(UUID appointmentId) {
         log.info("Finding patient appointments by appointment ID: {}", appointmentId);
-        
+
         List<PatientAppointment> appointments = patientAppointmentRepository.findByAppointmentId(appointmentId);
         return appointments.stream()
                 .map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto)
                 .collect(Collectors.toList());
     }
 
-    @Override
     @Transactional(readOnly = true)
-    public Page<PatientAppointmentDto> findByAppointmentId(UUID appointmentId, Pageable pageable) {
-        log.info("Finding patient appointments by appointment ID: {} with pagination", appointmentId);
-        
-        Page<PatientAppointment> appointments = patientAppointmentRepository.findByAppointmentId(appointmentId, pageable);
-        return appointments.map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto);
-    }
-
     @Override
-    @Transactional(readOnly = true)
     public Page<PatientAppointmentDto> findByPatientId(UUID patientId, Pageable pageable) {
         log.info("Finding patient appointments by patient ID: {} with pagination", patientId);
-        
+
         Page<PatientAppointment> appointments = patientAppointmentRepository.findByPatientId(patientId, pageable);
         return appointments.map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public PatientAppointmentDto findByPatientAndAppointment(UUID patientId, UUID appointmentId) {
-        log.info("Finding patient appointment by patient ID: {} and appointment ID: {}", patientId, appointmentId);
-        
-        PatientAppointment appointment = patientAppointmentRepository.findByPatientIdAndAppointmentId(patientId, appointmentId)
-                .orElseThrow(() -> new PatientServiceException("Patient appointment not found"));
-        
-        return patientAppointmentMapper.patientAppointmentToPatientAppointmentDto(appointment);
-    }
 
     @Override
     @Transactional(readOnly = true)
     public Page<PatientAppointmentDto> searchAppointments(UUID patientId, UUID appointmentId, Pageable pageable) {
         log.info("Searching patient appointments with multiple criteria");
-        
+
         // For now, implement basic search - can be enhanced with Specifications
         Page<PatientAppointment> appointments = patientAppointmentRepository.findAll(pageable);
         return appointments.map(patientAppointmentMapper::patientAppointmentToPatientAppointmentDto);
@@ -200,19 +181,19 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional
     public PatientAppointmentDto linkPatientToAppointment(UUID patientId, UUID appointmentId) {
         log.info("Linking patient ID: {} to appointment ID: {}", patientId, appointmentId);
-        
+
         try {
             Patient patient = patientRepository.findById(patientId)
                     .orElseThrow(() -> new PatientNotFoundException(patientId));
-            
+
             if (existsByPatientIdAndAppointmentId(patientId, appointmentId)) {
                 throw new PatientServiceException("Patient is already linked to this appointment");
             }
-            
+
             PatientAppointment patientAppointment = new PatientAppointment();
             patientAppointment.setPatient(patient);
             patientAppointment.setAppointmentId(appointmentId);
-            
+
             PatientAppointment savedAppointment = patientAppointmentRepository.save(patientAppointment);
             return patientAppointmentMapper.patientAppointmentToPatientAppointmentDto(savedAppointment);
         } catch (PatientNotFoundException e) {
@@ -227,7 +208,7 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     @Transactional
     public void unlinkPatientFromAppointment(UUID patientId, UUID appointmentId) {
         log.info("Unlinking patient ID: {} from appointment ID: {}", patientId, appointmentId);
-        
+
         try {
             patientAppointmentRepository.deleteByPatientIdAndAppointmentId(patientId, appointmentId);
         } catch (Exception e) {
@@ -236,17 +217,12 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
         }
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<PatientAppointmentDto> getAppointmentsForPatient(UUID patientId) {
-        return findByPatientId(patientId);
-    }
 
     @Override
     @Transactional(readOnly = true)
     public PatientAppointmentDto getPatientForAppointment(UUID appointmentId) {
         List<PatientAppointmentDto> appointments = findByAppointmentId(appointmentId);
-        return appointments.isEmpty() ? null : appointments.get(0);
+        return appointments.isEmpty() ? null : appointments.getFirst();
     }
 
     @Override
@@ -256,42 +232,32 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
     }
 
     // Validation Operations
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public boolean existsById(UUID id) {
         return patientAppointmentRepository.existsById(id);
     }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public boolean existsByPatientId(UUID patientId) {
         return patientAppointmentRepository.existsByPatientId(patientId);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public boolean existsByAppointmentId(UUID appointmentId) {
-        return patientAppointmentRepository.existsByAppointmentId(appointmentId);
-    }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public boolean existsByPatientIdAndAppointmentId(UUID patientId, UUID appointmentId) {
         return patientAppointmentRepository.existsByPatientIdAndAppointmentId(patientId, appointmentId);
     }
 
     // Statistics Operations
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public long countByPatientId(UUID patientId) {
         return patientAppointmentRepository.countByPatientId(patientId);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public long countByAppointmentId(UUID appointmentId) {
-        return patientAppointmentRepository.countByAppointmentId(appointmentId);
-    }
 
     @Override
     @Transactional(readOnly = true)
@@ -299,14 +265,14 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
         return patientAppointmentRepository.count();
     }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public long countDistinctAppointments() {
         return patientAppointmentRepository.countDistinctAppointments();
     }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public long countDistinctPatients() {
         return patientAppointmentRepository.countDistinctPatients();
     }
@@ -317,14 +283,14 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
         return patientAppointmentRepository.getPatientAppointmentStatistics();
     }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public List<UUID> findPatientsWithMultipleAppointments() {
         return patientAppointmentRepository.findPatientsWithMultipleAppointments();
     }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public List<UUID> findAppointmentsWithMultiplePatients() {
         return patientAppointmentRepository.findAppointmentsWithMultiplePatients();
     }
@@ -363,35 +329,30 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
         patientAppointmentRepository.deleteByPatientId(patientId);
     }
 
-    @Override
     @Transactional
+    @Override
     public void deleteByAppointmentId(UUID appointmentId) {
         log.info("Deleting all patient links for appointment ID: {}", appointmentId);
         patientAppointmentRepository.deleteByAppointmentId(appointmentId);
     }
 
-    @Override
     @Transactional
+    @Override
     public void deleteBatch(List<UUID> ids) {
         log.info("Deleting batch of {} patient appointments", ids.size());
         patientAppointmentRepository.deleteAllById(ids);
     }
 
     // Appointment Management
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public int getAppointmentCount(UUID patientId) {
         return (int) countByPatientId(patientId);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public boolean hasMultipleAppointments(UUID patientId) {
-        return countByPatientId(patientId) > 1;
-    }
 
-    @Override
     @Transactional(readOnly = true)
+    @Override
     public List<UUID> getAppointmentIds(UUID patientId) {
         List<PatientAppointment> appointments = patientAppointmentRepository.findByPatientId(patientId);
         return appointments.stream()
@@ -399,9 +360,4 @@ public class PatientAppointmentServiceImpl implements PatientAppointmentService 
                 .collect(Collectors.toList());
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public boolean hasAppointments(UUID patientId) {
-        return existsByPatientId(patientId);
-    }
 }
